# QuadroPhysX

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp
include/: Core.h  Hypervisor.h  Robot.h  RobotConfig.h  RobotState.h  SimulationResult.h  Strategy.h
include/task/: SimulationTask.h
src/: Core.cpp  Hypervisor.cpp  Robot.cpp
src/task/: SimulationTask.cpp
